# gerar-transacoes

./: pyproject.toml
gerar_transacoes/: __init__.py  gerador_de_transacoes.py
